<resources>
    <string name="app_name">MobileAgent</string>
    <string name="app_desc">Мобильный агент</string>
    <string name="exit">Выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirmExit">Вы уверены что хотите выйти?</string>
    <string name="synchronization">Синхронизация</string>
    <string name="routes">Маршруты</string>
    <string name="settings">Настройки</string>
    <string name="points">Точки маршрутов</string>
...
    <string name="el_connection_address">Эл.адрес присоединения</string>
    <string name="meter_readings">Показания ПУ</string>
    <string name="reserve_forbitten_message">Выполнение резервных маршрутов доступно только после завершения работ по оперативному маршруту</string>
    <string name="before">"До "</string>
    <string name="can_not_save">Необходимо заполнить все обязательные поля</string>
    <string name="new_less_then_old">Текущее показание меньше предыдущего. Сохранить данные?</string>
    <string name="good">Хорошо</string>
    <string name="attention">Внимание</string>
    <string name="avg_high_save">Среднемесячное потребление больше 5000 кВт. Сохранить данные?</string>
    <string name="avg_high">Среднемесячное потребление больше 5000 кВт</string>
    <string name="must_to_be_not_empty">Поле не должно быть пустым</string>
    <string name="suppose_to_be_digit">Должно быть число</string>
    <string name="not_valid_rating">Введенное показание не соотвествует разрядности </string>
    <string name="current_consumption_less_then_previous">Текущее показание меньше предыдущего</string>
    <string name="must_make_choise">Требуется выбрать значение</string>
    <string name="wrong_date_format">Неправильная дата</string>
    <string name="date_must_be_more_than_current">Дата должна быть больше текущей</string>
...
